# CameraFitting

./: Cargo.toml  LICENSE  README.md
camera_fitting/: Cargo.toml
camera_fitting/src/: lib.rs  root_polynomial.rs  utility_transforms.rs
colour/: Cargo.toml
colour/spectral_data/illuminants/: CIE_std_illum_A_1nm.csv
colour/src/: conversions.rs  lib.rs  oklab.rs  rgb.rs  spectrum.rs
maths/: Cargo.toml
maths/src/: dual_numbers.rs  linear_algebra.rs  traits.rs
optimisation/: Cargo.toml
optimisation/src/: lib.rs  mappable.rs  optimise.rs  parameters.rs  traits.rs
utils/: Cargo.toml
utils/src/: lib.rs
