[package]
name = "camera_fitting"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maths = { path = "../maths" }
colour = { path = "../colour" }
optimisation = { path = "../optimisation" }
utils = { path = "../utils" }
plotters = "0.3"
